--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "mongoose": "^8.2.0",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "sib-api-v3-sdk": "^8.5.0"
   },
   "scripts": {
     "start": "nodemon app.js"
